@@ -491,6 +491,26 @@ name|serde2
 operator|.
 name|objectinspector
 operator|.
+name|ObjectInspectorUtils
+operator|.
+name|ObjectInspectorCopyOption
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|serde2
+operator|.
+name|objectinspector
+operator|.
 name|StructField
 import|;
 end_import
@@ -528,26 +548,6 @@ operator|.
 name|objectinspector
 operator|.
 name|SubStructObjectInspector
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|serde2
-operator|.
-name|objectinspector
-operator|.
-name|ObjectInspectorUtils
-operator|.
-name|ObjectInspectorCopyOption
 import|;
 end_import
 
@@ -2700,6 +2700,26 @@ name|filesIdx
 index|]
 argument_list|)
 expr_stmt|;
+comment|// increment the CREATED_FILES counter
+if|if
+condition|(
+name|reporter
+operator|!=
+literal|null
+condition|)
+block|{
+name|reporter
+operator|.
+name|incrCounter
+argument_list|(
+name|ProgressCounter
+operator|.
+name|CREATED_FILES
+argument_list|,
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
 name|filesIdx
 operator|++
 expr_stmt|;
@@ -2886,19 +2906,9 @@ block|}
 block|}
 try|try
 block|{
-if|if
-condition|(
-name|reporter
-operator|!=
-literal|null
-condition|)
-block|{
-name|reporter
-operator|.
-name|progress
+name|updateProgress
 argument_list|()
 expr_stmt|;
-block|}
 comment|// if DP is enabled, get the final output writers and prepare the real output row
 assert|assert
 name|inputObjInspectors
