@@ -143,24 +143,6 @@ name|hive
 operator|.
 name|ql
 operator|.
-name|exec
-operator|.
-name|ExecMapperContext
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|hive
-operator|.
-name|ql
-operator|.
 name|lib
 operator|.
 name|Node
@@ -3320,6 +3302,8 @@ specifier|static
 enum|enum
 name|ProgressCounter
 block|{
+name|CREATED_FILES
+block|,
 name|C1
 block|,
 name|C2
